tests/compile_fail/bare_return_value_fn.olrn
fn bad(flag: bool) -> i64
{
    if flag { ret }
    ret 1
}

fn main() -> void
{
    @pl(bad(true))
}
